--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
   <main role="main" >
 
-    <button onclick="location.href = '/Documentation/index.html';" id="btn">Report</button>
+    <button onclick="location.href = 'Documentation/index.html';" id="btn">Report</button>
   </main>
 
   <footer>
    
     <br />
-    <a href="/Documentation/index.html">REPORT- REST vs GraphQL</a>
+    <a href="Documentation/index.html">REPORT- REST vs GraphQL</a>
   </footer>
 
 
